# separation

./: .gitignore  Cargo.toml  README.md
apps/solana-anchor/: Anchor.toml
apps/solana-anchor/programs/separation/: Cargo.toml
apps/solana-anchor/programs/separation/src/: lib.rs
apps/solana-anchor/tests/: separation.js
core/: Cargo.toml
core/src/: lib.rs
